--- a/components/consumers/pdf/default.html
+++ b/components/consumers/pdf/default.html
@@ -9,7 +9,7 @@
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
-            color: #333;
+            color: #2b2722;
             margin: 20px;
         }
 
@@ -33,14 +33,6 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
-        .report-title {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
         .scan {
             margin-bottom: 20px;
         }
@@ -48,13 +40,60 @@
         .scan-title {
             font-size: 20px;
             font-weight: bold;
-            color: #007bff;
+            color: #f65f1e;
             margin-bottom: 10px;
         }
 
         .scan-details {
             margin-top: 10px;
             color: #555;
+        }
+
+
+        .summary {
+            margin-top: 30px;
+            color: #555;
+        }
+
+        .introduction {
+            text-align: center;
+        }
+
+        .placeholder-metrics {
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 30px;
+            gap: 10px;
+        }
+
+        .placeholder-metrics > div {
+            border-radius: 4px;
+            background-color: #f1ede4;
+            flex-grow: 1;
+            text-align: center;
+            width: 50%;
+        }
+
+        .placeholder-metrics .high-severity {
+            background-color: #ffe3e3;
+            color: #982714;
+        }
+
+        .summary-table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px solid #777;
+        }
+
+        .summary-table th,
+        .summary-table td {
+            border: 1px solid #777;
+            padding: 4px 10px;
+        }
+
+        /* Detailed finding list */
+        .detailed-results-header {
+            margin-top: 40px;
         }
 
         .finding {
@@ -74,110 +113,152 @@
         .finding-title {
             font-size: 18px;
             font-weight: bold;
-            color: #333;
+            color: #2b2722;
             margin-bottom: 10px;
         }
 
-        .finding-details {
-            color: #777;
+        .finding-table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px solid #777;
         }
 
-        .introduction {
-            margin-bottom: 20px;
+        .finding-table th {
+            text-align: right;
+            vertical-align: top;
         }
 
-        .summary {
-            margin-top: 20px;
-            border-top: 1px solid #ddd;
-            padding-top: 20px;
-            color: #555;
-        }
-
-        .placeholder-metrics {
-            display: flex;
-            justify-content: space-around;
-            margin-bottom: 20px;
-        }
-
-        .placeholder-graph {
-            height: 200px;
-            background-color: #eaeaea;
-            border-radius: 5px;
+        .finding-table th,
+        .finding-table td {
+            border: 1px solid #777;
+            padding: 4px 10px;
         }
     </style>
 </head>
 
 <body>
 
-    <header>
-        <img src="https://github.com/smithy-security/smithy/raw/main/assets/smithy-logo-light.svg#gh-dark-mode-only" alt="Logo">
-        <h1>Smithy Report</h1>
-    </header>
+<header>
+    <img src="https://github.com/smithy-security/smithy/raw/main/assets/smithy-logo-light.svg#gh-dark-mode-only"
+         alt="Logo">
+    <h1>Smithy Report</h1>
+</header>
 
-    <div class="report">
-        <div class="report-title">Scan Results</div>
 
-        <!-- Introduction -->
-        <div class="introduction">
-            <p>This report summarizes the results of running Smithy.</p>
+<div class="report">
+    <div class="summary">
+        <p class="introduction">This report summarizes the results of running Smithy.</p>
+
+        <!-- Placeholder Metrics -->
+        <div class="placeholder-metrics">
+            <div class="total"><h3><span class="total">30</span> Total Findings</h3></div>
+            <div class="high-severity"><h3><span class="total">10</span> High Severity Findings</h3></div>
         </div>
-        <!-- Summary -->
-        <div class="summary">
-            <h2>Summary</h2>
+        <p>The vulnerability scans have identified potential issues that need attention. <br/>It is recommended to
+            review
+            and address the findings promptly to enhance the security of our systems.</p>
 
-            <!-- Placeholder Metrics -->
-            <div class="placeholder-metrics">
-                <div>
-                    <h3>Total Number of Findings</h3>
-                    <p>10</p>
-                </div>
-                <div>
-                    <h3>Total High Severity Findings</h3>
-                    <p>10</p>
-                </div>
-            </div>
-
-            <!-- Placeholder Graph -->
-            <div class="placeholder-graph"></div>
-
-            <p>The vulnerability scans have identified potential issues that need attention. It is recommended to review
-                and address the findings promptly to enhance the security of our systems.</p>
-        </div>
-
-        <!-- Scan -->
-        {{range .}}
-        <div class="scan">
-            <div class="scan-title">{{.OriginalResults.ScanInfo.ScanUuid}} - {{.OriginalResults.ToolName}}</div>
-            <div class="scan-details">
-                <div><strong>Start Time:</strong> {{.OriginalResults.ScanInfo.ScanStartTime}}</div>
-            </div>
+        <table class="summary-table">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Severity</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{range .}}
             {{range .Issues}}
-            <div class="finding">
-                <div class="finding-title">{{.RawIssue.Title}}</div>
-                <div class="finding-details">
-                    <div>Target: {{.RawIssue.Target}} </div>
-                    <div>Type: {{.RawIssue.Type}} </div>
-                    <div>CVSS: {{.RawIssue.Cvss}} </div>
-                    <div>CVE: {{.RawIssue.Cve}} </div>
-                    <div>Confidence: {{.RawIssue.Confidence}} </div>
-                    <div>Severity: {{.RawIssue.Severity}} </div>
-                    <div>Description: {{.RawIssue.Description}} </div>
-                    <div>First Seen: {{.FirstSeen}} </div>
-                    <div>Seen Before Times: {{.Count}} </div>
-                    <div>False Positive?:{{.FalsePositive}} </div>
-                    <div>Last Updated: {{.UpdatedAt}} </div>
-                    {{ range $key,$element := .Annotations }}
-                    <p><b>{{$key}}</b>:{{$element}}</p>
-                    {{end}}
-                    <div>SBOM<pre>{{.RawIssue.CycloneDXSBOM}}</pre></div>
-                </div>
-            </div>
+            <tr>
+                <td>{{.RawIssue.Title}}</td>
+                <td>{{.RawIssue.Severity}}</td>
+            </tr>
+            {{ end }}
             {{end}}
+            </tbody>
+        </table>
+    </div>
 
-            <!-- Add more scans as needed -->
+    <h2 class="detailed-results-header">Detailed Results</h2>
 
+    <!-- Scan -->
+    {{range .}}
+    <div class="scan">
+        <h3 class="scan-title">{{.OriginalResults.ScanInfo.ScanUuid}} - {{.OriginalResults.ToolName}}</h3>
+        <div class="scan-details">
+            <div><strong>Start Time:</strong> {{.OriginalResults.ScanInfo.ScanStartTime}}</div>
+        </div>
+        {{range .Issues}}
+        <div class="finding">
+            <h4 class="finding-title">{{.RawIssue.Title}}</h4>
+            <table class="finding-table">
+                <tbody>
+                <tr>
+                    <th>Target</th>
+                    <td>{{.RawIssue.Target}}</td>
+                </tr>
+                <tr>
+                    <th>Type</th>
+                    <td>{{.RawIssue.Type}}</td>
+                </tr>
+                <tr>
+                    <th>CVSS</th>
+                    <td>{{.RawIssue.Cvss}}</td>
+                </tr>
+                <tr>
+                    <th>CVE</th>
+                    <td>{{.RawIssue.Cve}}</td>
+                </tr>
+                <tr>
+                    <th>Confidence</th>
+                    <td>{{.RawIssue.Confidence}}</td>
+                </tr>
+                <tr>
+                    <th>Severity</th>
+                    <td>{{.RawIssue.Severity}}</td>
+                </tr>
+                <tr>
+                    <th>Description</th>
+                    <td>{{.RawIssue.Description}}</td>
+                </tr>
+                <tr>
+                    <th>First Seen</th>
+                    <td>{{.FirstSeen}}</td>
+                </tr>
+                <tr>
+                    <th>Seen Before Times</th>
+                    <td>{{.Count}}</td>
+                </tr>
+                <tr>
+                    <th>False Positive?</th>
+                    <td>{{.FalsePositive}}</td>
+                </tr>
+                <tr>
+                    <th>Last Updated</th>
+                    <td>{{.UpdatedAt}}</td>
+                </tr>
+                {{ range $key,$element := .Annotations }}
+                <tr>
+                    <th>{{$key}}</th>
+                    <td>{{$element}}</td>
+                </tr>
+                {{end}}
+                </tbody>
+            </table>
+
+            {{ if .RawIssue.CycloneDXSBOM }}
+            <div class="sbom">
+                <h5>SBOM</h5>
+                <pre>{{ .RawIssue.CycloneDXSBOM }}</pre>
+            </div>
+            {{ end }}
         </div>
         {{end}}
-</body>
 
+        <!-- Add more scans as needed -->
+
+    </div>
+    {{end}}
+</div>
+
+</body>
 </html>
