--- a/components/consumers/pdf/default.html
+++ b/components/consumers/pdf/default.html
@@ -8,9 +8,15 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
+            color: #2b2722;
             margin: 20px;
+            -webkit-print-color-adjust: exact;
+        }
+
+        @media print {
+            .finding {
+                break-inside: avoid;
+            }
         }
 
         header {
@@ -22,23 +28,15 @@
             max-width: 100px;
             height: auto;
         }
+        h2 {
+            margin-top: 40px;
+            text-align: center;
+        }
 
         .report {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
             background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .report-title {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            text-align: center;
-            margin-bottom: 20px;
         }
 
         .scan {
@@ -48,136 +46,334 @@
         .scan-title {
             font-size: 20px;
             font-weight: bold;
-            color: #007bff;
+            color: #f65f1e;
             margin-bottom: 10px;
+            display: flex;
+            gap: 8px;
+            justify-content: center;
+        }
+        .scan-title span:not(:empty) + span::before{
+            content: ' - ';
         }
 
         .scan-details {
             margin-top: 10px;
-            color: #555;
         }
 
-        .finding {
-            border: 1px solid #eee;
-            border-radius: 5px;
-            margin: 15px 0;
-            padding: 15px;
-            background-color: #f9f9f9;
-            /* Alternating background color */
-        }
 
-        .finding:nth-child(even) {
-            background-color: #f5f5f5;
-            /* Alternating background color for even elements */
-        }
-
-        .finding-title {
-            font-size: 18px;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        .finding-details {
-            color: #777;
+        .summary {
+            margin-top: 30px;
         }
 
         .introduction {
-            margin-bottom: 20px;
-        }
-
-        .summary {
-            margin-top: 20px;
-            border-top: 1px solid #ddd;
-            padding-top: 20px;
-            color: #555;
+            text-align: center;
         }
 
         .placeholder-metrics {
             display: flex;
             justify-content: space-around;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            gap: 10px;
         }
 
-        .placeholder-graph {
-            height: 200px;
-            background-color: #eaeaea;
-            border-radius: 5px;
+        .placeholder-metrics > div {
+            border-radius: 4px;
+            background-color: #fbf7f1;
+            border: 1px solid #d4c9b6;
+            flex-grow: 1;
+            text-align: center;
+            width: 50%;
+        }
+
+        .placeholder-metrics .high-severity {
+            background-color: #ffe3e3;
+            color: #982714;
+            border: 1px solid #ffb8b8;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px solid #d4c9b6;
+        }
+
+        table th {
+            background-color: #fbf7f1;
+        }
+
+        table th,
+        table td {
+            border: 1px solid #d4c9b6;
+            padding: 4px 10px;
+        }
+
+        .summary-table {
+            margin: 40px 0;
+        }
+
+        .summary-table th {
+            text-align: left;
+        }
+
+        /* Detailed finding list */
+        .scan-title,
+        .scan-details {
+            text-align: center;
+        }
+
+        .finding {
+            padding: 20px 0;
+        }
+
+        .finding-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin: 0 0 10px;
+        }
+
+        .finding-table th {
+            text-align: right;
+            vertical-align: top;
+            width: 110px;
+        }
+
+        pre {
+            margin: 0;
+            font-size: 0.7em;
+        }
+
+        /*severities*/
+        .SEVERITY_CRITICAL {
+            background-color: #f88691;
+        }
+
+        .SEVERITY_HIGH {
+            background-color: #ffe3e3;
+        }
+
+        .SEVERITY_MEDIUM {
+            background-color: #fde8cb;
+        }
+
+        .SEVERITY_LOW {
+            background-color: #fdf7bd;
+        }
+
+        .SEVERITY_INFO {
+            background-color: #dafbfb;
+        }
+
+        .SEVERITY_UNSPECIFIED {
+            background-color: #fbf7f1;
+        }
+
+        .summary-table .new {
+            font-weight: bold;
         }
     </style>
 </head>
 
 <body>
 
-    <header>
-        <img src="https://github.com/smithy-security/smithy/raw/main/assets/smithy-logo-light.svg#gh-dark-mode-only" alt="Logo">
-        <h1>Smithy Report</h1>
-    </header>
+<header>
+    <a href="https://smithy.security"><img
+            src="https://github.com/smithy-security/smithy/raw/main/assets/smithy-logo-light.svg#gh-dark-mode-only"
+            alt="Logo"></a>
+    <h1>Smithy Report</h1>
+</header>
 
-    <div class="report">
-        <div class="report-title">Scan Results</div>
 
-        <!-- Introduction -->
-        <div class="introduction">
-            <p>This report summarizes the results of running Smithy.</p>
-        </div>
-        <!-- Summary -->
-        <div class="summary">
-            <h2>Summary</h2>
+<div class="report">
+    <div class="summary">
+        <p class="introduction">This report summarizes the results of running Smithy.</p>
 
-            <!-- Placeholder Metrics -->
-            <div class="placeholder-metrics">
-                <div>
-                    <h3>Total Number of Findings</h3>
-                    <p>10</p>
-                </div>
-                <div>
-                    <h3>Total High Severity Findings</h3>
-                    <p>10</p>
-                </div>
-            </div>
-
-            <!-- Placeholder Graph -->
-            <div class="placeholder-graph"></div>
-
-            <p>The vulnerability scans have identified potential issues that need attention. It is recommended to review
-                and address the findings promptly to enhance the security of our systems.</p>
+        <!-- Placeholder Metrics -->
+        <div class="placeholder-metrics">
+            <div class="high-severity"><h3><span id="total-high"></span> High Severity</h3></div>
+            <div><h3><span id="total"></span> Total</h3></div>
         </div>
 
-        <!-- Scan -->
-        {{range .}}
-        <div class="scan">
-            <div class="scan-title">{{.OriginalResults.ScanInfo.ScanUuid}} - {{.OriginalResults.ToolName}}</div>
-            <div class="scan-details">
-                <div><strong>Start Time:</strong> {{.OriginalResults.ScanInfo.ScanStartTime}}</div>
-            </div>
+        <table class="summary-table">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th style="width:95px">Seen before</th>
+                <th>Severity</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{range .}}
             {{range .Issues}}
-            <div class="finding">
-                <div class="finding-title">{{.RawIssue.Title}}</div>
-                <div class="finding-details">
-                    <div>Target: {{.RawIssue.Target}} </div>
-                    <div>Type: {{.RawIssue.Type}} </div>
-                    <div>CVSS: {{.RawIssue.Cvss}} </div>
-                    <div>CVE: {{.RawIssue.Cve}} </div>
-                    <div>Confidence: {{.RawIssue.Confidence}} </div>
-                    <div>Severity: {{.RawIssue.Severity}} </div>
-                    <div>Description: {{.RawIssue.Description}} </div>
-                    <div>First Seen: {{.FirstSeen}} </div>
-                    <div>Seen Before Times: {{.Count}} </div>
-                    <div>False Positive?:{{.FalsePositive}} </div>
-                    <div>Last Updated: {{.UpdatedAt}} </div>
-                    {{ range $key,$element := .Annotations }}
-                    <p><b>{{$key}}</b>:{{$element}}</p>
-                    {{end}}
-                    <div>SBOM<pre>{{.RawIssue.CycloneDXSBOM}}</pre></div>
-                </div>
-            </div>
+            <tr class="issue-summary">
+                <td><a href="#{{ .RawIssue.Title | urlquery }}">{{.RawIssue.Title}}</a></td>
+                <td class="seen">{{.Count}} times</td>
+                <td class="summary severity {{.RawIssue.Severity}}">{{.RawIssue.Severity}} </td>
+            </tr>
+            {{ end }}
             {{end}}
+            </tbody>
+        </table>
+    </div>
 
-            <!-- Add more scans as needed -->
+    <h2>Detailed Results</h2>
 
+    <!-- Scan -->
+    {{range .}}
+    <div class="scan">
+        <h3 class="scan-title">{{.OriginalResults.ToolName}}</h3>
+        {{ if and .OriginalResults.ScanInfo.ScanStartTime (ne .OriginalResults.ScanInfo.ScanStartTime.Seconds 0) }}
+            <div class="scan-details">
+                <div class="scan-start-time">{{.OriginalResults.ScanInfo.ScanStartTime | formatTime}}</div>
+            </div>
+        {{ end }}
+        {{range .Issues}}
+        <div class="finding">
+            <h4 class="finding-title" id="{{ .RawIssue.Title | urlquery }}">{{ .RawIssue.Title }}</h4>
+            <table class="finding-table">
+                <tbody>
+
+                {{ if and .RawIssue.Severity (ne .RawIssue.Severity nil) }}
+                <tr>
+                    <th>Severity</th>
+                    <td class="severity {{.RawIssue.Severity}}">{{.RawIssue.Severity}}</td>
+                </tr>
+                {{ end }}
+
+                {{ if and .RawIssue.Cvss (ne .RawIssue.Cvss 0.0) }}
+                <tr>
+                    <th><a href="https://nvd.nist.gov/vuln-metrics/cvss">CVSS</a></th>
+                    <td>{{.RawIssue.Cvss}}</td>
+                </tr>
+                {{ end }}
+
+                {{ if and .RawIssue.Confidence (ne .RawIssue.Confidence nil) }}
+                <tr>
+                    <th>Confidence</th>
+                    <td class="confidence">{{.RawIssue.Confidence}}</td>
+                </tr>
+                {{ end }}
+
+                {{ if and .RawIssue.Type (ne .RawIssue.Type "") }}
+                <tr>
+                    <th>Type</th>
+                    <td>{{.RawIssue.Type}}</td>
+                </tr>
+                {{ end }}
+
+                {{ if and .RawIssue.Cve (ne .RawIssue.Cve "") }}
+                <tr>
+                    <th>CVE</th>
+                    <td>
+                        <a href="https://nvd.nist.gov/vuln/detail/{{.RawIssue.Cve}}">{{.RawIssue.Cve}}</a>
+                    </td>
+                </tr>
+                {{ end }}
+
+                {{if gt (len .RawIssue.Cwe) 0}}
+                    <tr class="cwe-list">
+                        <th>CWE</th>
+                        <td>
+                            {{range .RawIssue.Cwe}}
+                                <a href="https://cwe.mitre.org/data/definitions/{{ . }}.html">{{ . }}</a>
+                            {{end}}
+                        </td>
+                    </tr>
+                {{end}}
+
+                {{ if and .RawIssue.Target (ne .RawIssue.Target "") }}
+                <tr>
+                    <th>Target</th>
+                    <td>{{.RawIssue.Target}}</td>
+                </tr>
+                {{ end }}
+
+                {{ if and .RawIssue.Description (ne .RawIssue.Description "") }}
+                <tr>
+                    <th>Description</th>
+                    <td>
+                        <pre>{{.RawIssue.Description}}</pre>
+                    </td>
+                </tr>
+                {{ end }}
+
+                {{ if and .FirstSeen (ne .FirstSeen nil) }}
+                <tr>
+                    <th>First Seen</th>
+                    <td>{{.FirstSeen | formatTime}}</td>
+                </tr>
+                {{ end }}
+
+                <tr>
+                    <th>Seen Before</th>
+                    <td class="seen">{{.Count}} times</td>
+                </tr>
+
+                {{ if and .FalsePositive (ne .FalsePositive "") }}
+                <tr>
+                    <th>False Positive?</th>
+                    <td>{{.FalsePositive}}</td>
+                </tr>
+                {{ end }}
+
+                {{ if and .UpdatedAt (ne .UpdatedAt.Seconds 0) }}
+                <tr>
+                    <th>Last Updated</th>
+                    <td>{{ .UpdatedAt | formatTime }}</td>
+                </tr>
+                {{ end }}
+
+                {{ range $key,$element := .Annotations }}
+                <tr>
+                    <th>{{$key}}</th>
+                    <td>{{$element}}</td>
+                </tr>
+                {{end}}
+                </tbody>
+            </table>
+
+            {{ if .RawIssue.CycloneDXSBOM }}
+            <div class="sbom">
+                <h5>SBOM for {{.RawIssue.Title}}</h5>
+                <pre>{{ .RawIssue.CycloneDXSBOM }}</pre>
+            </div>
+            {{ end }}
         </div>
         {{end}}
-</body>
 
+        <!-- Add more scans as needed -->
+
+    </div>
+    {{end}}
+</div>
+
+</body>
+<footer>
+    <script>
+        // calculate totals
+        document.getElementById("total").innerHTML = document.querySelectorAll('.issue-summary').length;
+        document.getElementById("total-high").innerHTML = document.querySelectorAll('.summary.SEVERITY_CRITICAL').length + document.querySelectorAll('.summary.SEVERITY_HIGH').length;
+
+        // Remove the "SEVERITY_" prefix
+        document.querySelectorAll('.severity').forEach(function(element) {
+            if (element.textContent.startsWith("SEVERITY_")) {
+                element.textContent = element.textContent.replace("SEVERITY_", "");
+            }
+        });
+
+        // Remove the "CONFIDENCE_" prefix
+        document.querySelectorAll('.confidence').forEach(function(element) {
+            if (element.textContent.startsWith("CONFIDENCE_")) {
+                element.textContent = element.textContent.replace("CONFIDENCE_", "");
+            }
+        });
+
+        // Reformat ".seen" results to show which vulns are New
+        document.querySelectorAll('.seen').forEach(function(element) {
+            if (element.textContent === "0 times") {
+                element.textContent = element.textContent.replace("0 times", "Never");
+                element.classList.add("new");
+            }
+        });
+    </script>
+</footer>
 </html>
